--- a/MVC5Homework2/Views/VendorListInfo/Search.cshtml
+++ b/MVC5Homework2/Views/VendorListInfo/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MVC5Homework2.Models.usp_SearchVendor_Result>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @*@Html.ActionLink("Create New", "Create")*@
 </p>
 <table class="table">
     <tr>
@@ -95,9 +95,9 @@
             @Html.DisplayFor(modelItem => item.手機)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
         </td>
     </tr>
 }
