--- a/MVC5Homework2/Views/客戶聯絡人/Edit.cshtml
+++ b/MVC5Homework2/Views/客戶聯絡人/Edit.cshtml
@@ -64,8 +64,9 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.客戶資料, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.客戶資料, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
+                @Html.HiddenFor(model=> Model.客戶資料.Email)
                 @*@Html.EditorFor(model => model.客戶資料, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.客戶資料, "", new { @class = "text-danger" })*@
             </div>
