--- a/MVC5Homework2/Views/客戶資料/Index.cshtml
+++ b/MVC5Homework2/Views/客戶資料/Index.cshtml
@@ -30,6 +30,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IsDeleted)
+        </th>
         <th></th>
     </tr>
 
@@ -53,6 +56,10 @@
         <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
+        <td>
+            @Html.RadioButton("IsDeleted", true, item.IsDeleted == true)
+        </td>
+
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
