登入Manage，Hash，PageList，

--- a/MVC5Homework2/Views/Shared/Error.cshtml
+++ b/MVC5Homework2/Views/Shared/Error.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@model System.Web.Mvc.HandleErrorInfo
+
+@{
+    ViewBag.Title = "Error";
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -8,6 +14,8 @@
     <hgroup>
         <h1>Error.</h1>
         <h2>An error occurred while processing your request.</h2>
+       
     </hgroup>
 </body>
 </html>
+<pre>@Model.Exception.ToString()</pre>
