--- a/MVC5Homework2/Views/Login/Create.cshtml
+++ b/MVC5Homework2/Views/Login/Create.cshtml
@@ -20,6 +20,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Account, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Account, "", new { @class = "text-danger" })
+                admin
             </div>
         </div>
 
@@ -28,6 +29,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                admin
             </div>
         </div>
 
