剩下批次存檔跟套版

--- a/MVC5Homework2/Views/客戶資料/Details.cshtml
+++ b/MVC5Homework2/Views/客戶資料/Details.cshtml
@@ -61,7 +61,15 @@
 
     </dl>
 </div>
+
+@Html.Action("Include", "客戶聯絡人", new { ClientId = Model.Id })
+@*@Html.Partial("../客戶聯絡人/Index", Model.客戶聯絡人)*@
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+
+
+
