--- a/MVC5Homework2/Views/客戶聯絡人/Index.cshtml
+++ b/MVC5Homework2/Views/客戶聯絡人/Index.cshtml
@@ -8,7 +8,9 @@
 
 <form method="post">
     客戶 職稱欄位進行資料篩選:
-    @Html.DropDownList("myList", null, htmlAttributes: new { @class = "form-control" })
+    @Html.DropDownList("Occupation", null, htmlAttributes: new { @class = "form-control" })
+    @*@Html.DropDownList("Material", new SelectList(new[] {"1","2","3"}))*@
+    @*@Html.DropDownList("d", new SelectList(ViewBag.myList))*@
     <button>搜尋</button>
 </form>
 
